--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #54b911;
         }
         header {
-            background-color: #333;
+            background-color: #000000;
             color: #fff;
             padding: 10px 0;
             text-align: center;
@@ -47,13 +47,13 @@
 <body>
 
     <header>
-        <h1>Meu Site</h1>
+        <h1>el bigodão</h1>
     </header>
 
     <div class="container">
         <section class="photo-space">
-            <h2>Minha Foto</h2>
-            <img src="caminho/para/sua/foto.jpg" alt="Minha Foto">
+            <h2>shrek bigodudo</h2>
+            <img src="5cdfcb6568794ce2417c6f5571390f2c.jpg" alt="Minha Foto">
         </section>
     </div>
 
