--- a/index.html
+++ b/index.html
@@ -64,6 +64,28 @@
         </section>
     </div>
 
+
+    <div class="container">
+        <section class="photo-space">
+            <h2>shrek bigodudo</h2>
+            <img src="5cdfcb6568794ce2417c6f5571390f2c.jpg" alt="Minha Foto">
+        </section>
+    </div>
+
+    <div class="container">
+        <section class="photo-space">
+            <h2>shrek bigodudo</h2>
+            <img src="5cdfcb6568794ce2417c6f5571390f2c.jpg" alt="Minha Foto">
+        </section>
+    </div>
+
+    <div class="container">
+        <section class="photo-space">
+            <h2>shrek bigodudo</h2>
+            <img src="5cdfcb6568794ce2417c6f5571390f2c.jpg" alt="Minha Foto">
+        </section>
+    </div>
+
     <footer>
         <p>&copy; 2023 Meu Site. Todos os direitos reservados.</p>
     </footer>
