--- a/index.html
+++ b/index.html
@@ -4,45 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site com Foto</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #54b911;
-        }
-        header {
-            background-color: #000000;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .photo-space {
-            text-align: center;
-            margin: 20px 0;
-        }
-        .photo-space img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -63,7 +25,6 @@
             <img src="5cdfcb6568794ce2417c6f5571390f2c.jpg" alt="Minha Foto">
         </section>
     </div>
-
 
     <div class="container">
         <section class="photo-space">
