--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>el bigodão</h1>
+        <h1>ESTILO MODERADO</h1>
     </header>
 
     <div class="container">
@@ -21,31 +21,26 @@
 
     <div class="container">
         <section class="photo-space">
-            <h2>shrek bigodudo</h2>
+            <h2>gear fifht</h2>
             <img src="img/4991ee59f968fb5832738d0bf9401e5a.jpg" alt="Minha Foto">
         </section>
     </div>
 
     <div class="container">
         <section class="photo-space">
-            <h2>shrek bigodudo</h2>
+            <h2>supra mk4</h2>
             <img src="img/7a6dce816ed2aaf480cb998322ac2747.jpg" alt="Minha Foto">
         </section>
     </div>
 
     <div class="container">
         <section class="photo-space">
-            <h2>shrek bigodudo</h2>
+            <h2>Homem masculo</h2>
             <img src="img/c4bb53ceba9a3b91d1566bc905af832c1f0cefa7r1-720-720v2_uhq.jpg" alt="Minha Foto">
         </section>
     </div>
 
-    <div class="container">
-        <section class="photo-space">
-            <h2>shrek bigodudo</h2>
-            <img src="img/4991ee59f968fb5832738d0bf9401e5a.jpg" alt="Minha Foto">
-        </section>
-    </div>
+    
 
     <footer>
         <p>&copy; 2023 Meu Site. Todos os direitos reservados.</p>
