--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
         </section>
     </div>
 
-    
-
-    <footer>
-        <p>&copy; 2025 Meu Site. Todos os direitos reservados.</p>
-    </footer>
 
 </body>
+    <footer>
+        
+    </footer>
+
+    <div class="rodapesuper"> </div>
+    <div class="rodape">
+        <div class="imagem">
+            <img src="img/7a6dce816ed2aaf480cb998322ac2747.jpg">
+        </div>
+    </div>
 </html>
