--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         </section>
     </div>
 
-    <div class="imagem">
+    <div class="container">
         <img src="img/7a6dce816ed2aaf480cb998322ac2747.jpg">
     </div>
+
+   
 
 
 </body>
